--- a/Lab_DynamicImage/Lab_DynamicImage_1/index.html
+++ b/Lab_DynamicImage/Lab_DynamicImage_1/index.html
@@ -22,12 +22,17 @@
 	img[2] = "images/sd.gif";	url[2] = "http://sandiego.padres.mlb.com/";
 	img[3] = "images/was.gif";	url[3] = "http://washington.nationals.mlb.com/";
 	
-	var iImage = 0;
+	// var iImage = 0;
 	// 
 	// TODO: 如何以亂數設定 iImage 的值
 	//
-	document.getElementById("imgs").src = img[iImage];
-	document.getElementById("imgshref").href = url[iImage];
+	var iImage = function () {
+		ra = Math.floor(Math.random()*img.length);
+		return ra;
+	};
+
+	document.getElementById("imgs").src = img[iImage()];
+	document.getElementById("imgshref").href = url[iImage()];
 </script>
 
 </body>
