--- a/Lab_DynamicImage/Lab_DynamicImage_2/index.html
+++ b/Lab_DynamicImage/Lab_DynamicImage_2/index.html
@@ -16,7 +16,9 @@
 
 <script type="text/javascript">
 
-setImage();
+// setImage();
+// setTimeout(setImage,1000);
+setInterval(setImage,500);
 
 function setImage()
 {
@@ -30,7 +32,7 @@ function setImage()
 	var iImage = Math.floor(Math.random() * img.length);
 	document.getElementById("imgs").src = img[iImage];
 	document.getElementById("imgshref").href = url[iImage];
-
+	// setTimeout(setImage,1000);
 }
 
 </script>
